--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         
         <!-- COMMON TAGS -->
         <meta charset="utf-8">
-        <title>SPECTRAL</title>
+        <title>Spectral by Production Type</title>
         <!-- Search Engine -->
         <meta name="description" content="A new typeface for Google Docs">
         <meta name="image" content="https://googlefonts.github.io/spectral/images/spectral-social.jpg">
